Fix 1px left caret alignment in pagination nav

--- a/handsontable/src/styles/components/plugins/_pagination.scss
+++ b/handsontable/src/styles/components/plugins/_pagination.scss
@@ -131,6 +131,10 @@
           }
         }
 
+        &__button--left-caret::before {
+          transform: translateX(-1px);
+        }
+
         &__label {
           white-space: nowrap;
           min-width: 100px;
